# masterarbeit-helper-scripts

./: .gitignore  .gitmodules  artifact_serach.py  bokeh_test.ipynb  consistant-firmware-sinad-analysis.py  energy_development.py  fast-firmware-sinad-analysis.py  measurement_suite.py  msmt_queue.sh  mso-analysis.py  osc_analysis.py  picoscope_analysis.py  plot_duration_sweep.py  plot_energy_diffs.py  plot_raw_data.py  plot_static_comparison.py  plot_sweep.py  pyproject.toml  spectrum.py  static_analysis.py  vega-altair_test.ipynb
fast_firmware_cleanup/: Cargo.toml
fast_firmware_cleanup/src/: main.rs
osc_data_cleanup/: Cargo.toml
osc_data_cleanup/src/: main.rs
power_calculations/: .gitignore  Cargo.toml
power_calculations/src/: args.rs  data_actions.rs  data_reading.rs  data_reading_types.rs  main.rs  output_types.rs
pysnr/: sinad.py  utils.py
