[project]
name = "data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair[all]>=6.0.0",
    "anywidget>=0.9.21",
    "bokeh>=3.8.1",
    "ipython>=9.7.0",
    "jupyter-bokeh>=4.0.5",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "polars>=1.34.0",
    "pywavelets>=1.9.0",
    "scipy>=1.16.2",
    "scipy-stubs>=1.16.2.4",
    "vegafusion>=2.0.3",
]

[tool.basedpyright]
typeCheckingMode = "standard"

