[package]
name = "power_calculations"
version = "0.1.0"
edition = "2024"

[dependencies]
bpaf = { version = "0.9.20", features = ["bpaf_derive"] }
indicatif = "0.18.3"
serde = { version = "1.0.228", features = ["derive"] }
npyz = { version = "0.8.4", features = ["npz"] }
matplotlib = { path = "./rust-matplotlib", version = "0.2.0" }
biquad = "0.6.0"
pyo3 = "=0.28.2"
parquet = "58.1.0"
serde-saphyr = { version = "0.0.23", default-features = false, features = ["serialize"] }
anyhow = "1.0"
